@@ -366,6 +366,7 @@ constexpr int32_t WC_STAFF__WIDX_PICKUP = 9;
 constexpr int32_t WC_TILE_INSPECTOR__WIDX_BUTTON_ROTATE = 13;
 constexpr int32_t WC_TILE_INSPECTOR__WIDX_BUTTON_COPY = 16;
 constexpr int32_t WC_TILE_INSPECTOR__WIDX_BUTTON_PASTE = 15;
+constexpr int32_t WC_TILE_INSPECTOR__WIDX_BUTTON_SORT = 14;
 constexpr int32_t WC_TILE_INSPECTOR__WIDX_BUTTON_REMOVE = 10;
 constexpr int32_t WC_TILE_INSPECTOR__WIDX_BUTTON_MOVE_UP = 11;
 constexpr int32_t WC_TILE_INSPECTOR__WIDX_BUTTON_MOVE_DOWN = 12;
